; ModuleID = '/home/carl/AnghaBench/linux/drivers/vfio/mdev/extr_mdev_sysfs.c_remove_mdev_supported_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vfio/mdev/extr_mdev_sysfs.c_remove_mdev_supported_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.mdev_type = type { i32, i32*, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.attribute = type { i32 }

@mdev_type_attr_create = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mdev_type*)* @remove_mdev_supported_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_mdev_supported_type(%struct.mdev_type* %0) #0 {
  %2 = alloca %struct.mdev_type*, align 8
  store %struct.mdev_type* %0, %struct.mdev_type** %2, align 8
  %3 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %4 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %3, i32 0, i32 0
  %5 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %6 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %5, i32 0, i32 2
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.attribute**
  %11 = call i32 @sysfs_remove_files(i32* %4, %struct.attribute** %10)
  %12 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %13 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @kobject_put(i32* %14)
  %16 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %17 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %16, i32 0, i32 0
  %18 = call i32 @sysfs_remove_file(i32* %17, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @mdev_type_attr_create, i32 0, i32 0))
  %19 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %20 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %19, i32 0, i32 0
  %21 = call i32 @kobject_del(i32* %20)
  %22 = load %struct.mdev_type*, %struct.mdev_type** %2, align 8
  %23 = getelementptr inbounds %struct.mdev_type, %struct.mdev_type* %22, i32 0, i32 0
  %24 = call i32 @kobject_put(i32* %23)
  ret void
}

declare dso_local i32 @sysfs_remove_files(i32*, %struct.attribute**) #1

declare dso_local i32 @kobject_put(i32*) #1

declare dso_local i32 @sysfs_remove_file(i32*, i32*) #1

declare dso_local i32 @kobject_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
